// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResevoirService should be able to get aggregate data for tokens 1`] = `
[
  {
    "highestBid": {
      "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
      "createdAt": "2022-11-16T13:36:35.208Z",
      "expiration": 1669210505,
      "feeBps": 200,
      "feeBreakdown": [
        {
          "bps": 150,
          "kind": "marketplace",
          "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        },
        {
          "bps": 50,
          "kind": "royalty",
          "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
        },
      ],
      "id": "0xce9a993ab7e1402993e8765e50d74eef4b1d45dce1cbe9d0772b8908f8e49bb8",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "looks-rare",
      "maker": "0xc05669e488f0942ff1c3e2f6921a7a1942dd6ca2",
      "price": {
        "amount": {
          "decimal": 10.99,
          "native": 10.99,
          "raw": "10990000000000000000",
          "usd": 13767.24697,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 10.7702,
          "native": 10.7702,
          "raw": "10770200000000000000",
          "usd": 13491.90203,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "looksrare.org",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
        "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        "name": "LooksRare",
        "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/9018",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:9018",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-16T13:36:35.208Z",
      "validFrom": 1668605777,
      "validUntil": 1669210505,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 15982158,
      "fillSource": "x2y2.io",
      "from": "0x56e1b883a7ee8c948d014af899e2710b8b89de6d",
      "id": "fce78d8450455977fb120b8dab4ed01ac5631a5ab431984c7c6c6288e6f2cad9",
      "logIndex": 156,
      "orderId": "0xd6dca82979729f5ad2d434f035fb67ce81988c3dbfcf5ccfc3e38e177d4e8a0c",
      "orderKind": "x2y2",
      "orderSide": "ask",
      "orderSource": "x2y2.io",
      "price": {
        "amount": {
          "decimal": 10.25,
          "native": 10.25,
          "raw": "10250000000000000000",
          "usd": 12730.4702,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "3fb05b8d27c429412175d25770fc0bb87ab50a0ac991154a9e3298c58a5d9958",
      "timestamp": 1668596507,
      "to": "0xc05669e488f0942ff1c3e2f6921a7a1942dd6ca2",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
        "image": null,
        "name": null,
        "tokenId": "9018",
      },
      "txHash": "0x0b0e7e7006992bcb8e426cdca58e8875e445745bdda6e75344dbe55b19fe9e18",
      "washTradingScore": 0,
    },
    "lowestListing": {
      "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
      "createdAt": "2022-11-16T11:32:26.557Z",
      "expiration": 1669203063,
      "feeBps": 300,
      "feeBreakdown": [
        {
          "bps": 50,
          "kind": "marketplace",
          "recipient": "0xd823c605807cc5e6bd6fc0d7e4eea50d3e2d66cd",
        },
        {
          "bps": 250,
          "kind": "royalty",
          "recipient": "0xa858ddc0445d8131dac4d1de01f834ffcba52ef1",
        },
      ],
      "id": "0x7ca8ea8cb1b531c1d20259ec0b7464e2b40caf31a27ff274f746db39c1a8ac6c",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "x2y2",
      "maker": "0xc05669e488f0942ff1c3e2f6921a7a1942dd6ca2",
      "price": {
        "amount": {
          "decimal": 11,
          "native": 11,
          "raw": "11000000000000000000",
          "usd": 13779.77404,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 10.67,
          "native": 10.67,
          "raw": "10670000000000000000",
          "usd": 13366.38082,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "x2y2.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/x2y2-logo.png",
        "id": "0xdc28ffaea1f91a88fb6fd0a8fe70d71bdd64284c",
        "name": "X2Y2",
        "url": "https://x2y2.io/eth/0x60e4d786628fea6478f785a6d7e704777c86a7c6/9018",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:9018",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-16T11:32:26.557Z",
      "validFrom": 1668598346,
      "validUntil": 1669203063,
    },
  },
  {
    "highestBid": {
      "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
      "createdAt": "2022-11-16T14:35:11.082Z",
      "expiration": 1671201277,
      "feeBps": 200,
      "feeBreakdown": [
        {
          "bps": 150,
          "kind": "marketplace",
          "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        },
        {
          "bps": 50,
          "kind": "royalty",
          "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
        },
      ],
      "id": "0xfaf62580d1b09be900c589a860d4257adaa6e0b015b0096e4f821bfc970fc10f",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "looks-rare",
      "maker": "0x165896732df25087eba4e736604559ceafdfc82f",
      "price": {
        "amount": {
          "decimal": 11.87,
          "native": 11.87,
          "raw": "11870000000000000000",
          "usd": 14869.6289,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 11.6326,
          "native": 11.6326,
          "raw": "11632600000000000000",
          "usd": 14572.23632,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "looksrare.org",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
        "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        "name": "LooksRare",
        "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/3927",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:3927",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-16T14:35:11.082Z",
      "validFrom": 1668609284,
      "validUntil": 1671201277,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 15096851,
      "fillSource": "looksrare.org",
      "from": "0x4a39e17ad4b045216d3702b2748e2c26f597fd84",
      "id": "decb97716f04efec2e8381f3826d453a34c5962e05e198f8df78837d898014cb",
      "logIndex": 56,
      "orderId": "0x84f65adaa01ecdb8183ad525505056622bbdab625336dd31274762d8232e56f3",
      "orderKind": "looks-rare",
      "orderSide": "ask",
      "orderSource": "looksrare.org",
      "price": {
        "amount": {
          "decimal": 18,
          "native": 18,
          "raw": "18000000000000000000",
          "usd": 21397.06157,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "d49259c22437d2a29085a30625d19f430e300faee764ef1c9fef3e4a9cba666d",
      "timestamp": 1657215937,
      "to": "0x165896732df25087eba4e736604559ceafdfc82f",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
        "image": null,
        "name": null,
        "tokenId": "3927",
      },
      "txHash": "0x3337067167986befd021710b1cfe705141dceeb8e1edfc6a09c91591c1f73d48",
      "washTradingScore": 0,
    },
    "lowestListing": {
      "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
      "createdAt": "2022-11-16T14:35:11.082Z",
      "expiration": 1671201277,
      "feeBps": 200,
      "feeBreakdown": [
        {
          "bps": 150,
          "kind": "marketplace",
          "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        },
        {
          "bps": 50,
          "kind": "royalty",
          "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
        },
      ],
      "id": "0xfaf62580d1b09be900c589a860d4257adaa6e0b015b0096e4f821bfc970fc10f",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "looks-rare",
      "maker": "0x165896732df25087eba4e736604559ceafdfc82f",
      "price": {
        "amount": {
          "decimal": 11.87,
          "native": 11.87,
          "raw": "11870000000000000000",
          "usd": 14869.6289,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 11.6326,
          "native": 11.6326,
          "raw": "11632600000000000000",
          "usd": 14572.23632,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "looksrare.org",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
        "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
        "name": "LooksRare",
        "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/3927",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:3927",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-16T14:35:11.082Z",
      "validFrom": 1668609284,
      "validUntil": 1671201277,
    },
  },
  {
    "highestBid": {
      "contract": "0xed5af388653567af2f388e6224dc7c4b3241c544",
      "createdAt": "2022-11-15T02:38:44.638Z",
      "expiration": 1668929348,
      "feeBps": 750,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 500,
          "kind": "royalty",
          "recipient": "0xb4d24dacbdffa1bbf9a624044484b3feeb7fdf74",
        },
      ],
      "id": "0xcdaa788bb8ae77976779086901bdd2e31d434c048d291981f02bb6f169b4823e",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0x8599254f994d008f77a2144e049ee27940e9045f",
      "price": {
        "amount": {
          "decimal": 11,
          "native": 11,
          "raw": "11000000000000000000",
          "usd": 13779.77404,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 10.175,
          "native": 10.175,
          "raw": "10175000000000000000",
          "usd": 12746.29099,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0xed5af388653567af2f388e6224dc7c4b3241c544/2743",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0xed5af388653567af2f388e6224dc7c4b3241c544:2743",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-15T02:39:47.398Z",
      "validFrom": 1668479797,
      "validUntil": 1668929348,
    },
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 14735326,
      "fillSource": "opensea.io",
      "from": "0xb20c8e35497977e55469d3d20a8358a26d7857f8",
      "id": "4cf50858a0b196fbcda64205fdac10d8931087325bff25acd45830798f4cd597",
      "logIndex": 469,
      "orderId": "0x80c12a2f563fb3a847e9347eba692f07111b2bb9015939a6e8e2574fd43fcdde",
      "orderKind": "wyvern-v2.3",
      "orderSide": "ask",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 22,
          "native": 22,
          "raw": "22000000000000000000",
          "usd": 58107.04035,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
      },
      "saleId": "f999c07ef48a9b877e3eee60d09f003a2bcf360137ac99eb81f84f166bcdbc69",
      "timestamp": 1652003079,
      "to": "0x8599254f994d008f77a2144e049ee27940e9045f",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0xed5af388653567af2f388e6224dc7c4b3241c544",
        "image": null,
        "name": null,
        "tokenId": "2743",
      },
      "txHash": "0x6c150063091ad10b5e3dcf07333ba56f98e95fe0379ef063feea43e9d655ed3f",
      "washTradingScore": 0,
    },
    "lowestListing": {
      "contract": "0xed5af388653567af2f388e6224dc7c4b3241c544",
      "createdAt": "2022-11-13T07:31:31.774Z",
      "expiration": 1668929348,
      "feeBps": 750,
      "feeBreakdown": [
        {
          "bps": 250,
          "kind": "marketplace",
          "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
        },
        {
          "bps": 500,
          "kind": "royalty",
          "recipient": "0xb4d24dacbdffa1bbf9a624044484b3feeb7fdf74",
        },
      ],
      "id": "0xe36eb79b4924171539dfe4df7a9d26051737271d521ff0f221e7916a502aefec",
      "isDynamic": false,
      "isReservoir": null,
      "kind": "seaport",
      "maker": "0x8599254f994d008f77a2144e049ee27940e9045f",
      "price": {
        "amount": {
          "decimal": 13.5,
          "native": 13.5,
          "raw": "13500000000000000000",
          "usd": 16911.54087,
        },
        "currency": {
          "contract": "0x0000000000000000000000000000000000000000",
          "decimals": 18,
          "name": "Ether",
          "symbol": "ETH",
        },
        "netAmount": {
          "decimal": 12.4875,
          "native": 12.4875,
          "raw": "12487500000000000000",
          "usd": 15643.1753,
        },
      },
      "quantityFilled": 0,
      "quantityRemaining": 1,
      "side": "sell",
      "source": {
        "domain": "opensea.io",
        "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
        "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
        "name": "OpenSea",
        "url": "https://opensea.io/assets/0xed5af388653567af2f388e6224dc7c4b3241c544/2743",
      },
      "status": "active",
      "taker": "0x0000000000000000000000000000000000000000",
      "tokenSetId": "token:0xed5af388653567af2f388e6224dc7c4b3241c544:2743",
      "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "updatedAt": "2022-11-13T07:32:40.993Z",
      "validFrom": 1668324548,
      "validUntil": 1668929348,
    },
  },
  {
    "highestBid": undefined,
    "lastSale": {
      "amount": "1",
      "batchIndex": 1,
      "block": 15675893,
      "fillSource": "opensea.io",
      "from": "0xa1c0c0ff6eaa63e7b0c7bf441fc146afdb08fc7b",
      "id": "a99ef93fbe2da5ed84f255d96b94a28b054dfbb36e6b155fbd3290e4231121a5",
      "logIndex": 273,
      "orderId": "0x9f05f13ba7be414d52fd0652c18aceb08a86af18f3d5e62545afc51246f5b928",
      "orderKind": "seaport",
      "orderSide": "bid",
      "orderSource": "opensea.io",
      "price": {
        "amount": {
          "decimal": 5.3,
          "native": 5.3,
          "raw": "5300000000000000000",
          "usd": 7014.2535,
        },
        "currency": {
          "contract": "0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
          "decimals": 18,
          "name": "Wrapped Ether",
          "symbol": "WETH",
        },
      },
      "saleId": "19034aaa3cb554b941b79af25a40fdf16051fe33caed08d61b428fc1a294e118",
      "timestamp": 1664900099,
      "to": "0xe31bb1a9a271b754cbadcd5e993c883d8e4cf9af",
      "token": {
        "collection": {
          "id": null,
          "name": null,
        },
        "contract": "0x394e3d3044fc89fcdd966d3cb35ac0b32b0cda91",
        "image": null,
        "name": null,
        "tokenId": "6781",
      },
      "txHash": "0xa4823ab85eb06c6d6fa27e809a184249563719a63299fccbccda7dd61b116533",
      "washTradingScore": 0,
    },
    "lowestListing": undefined,
  },
]
`;

exports[`ResevoirService should be able to get listings for tokens 1`] = `
{
  "0x394E3d3044fC89fCDd966D3cb35Ac0B32B0Cda91:6781": undefined,
  "0x60E4d786628Fea6478F785A6d7e704777c86a7c6:3927": {
    "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
    "createdAt": "2022-11-16T14:35:11.082Z",
    "expiration": 1671201277,
    "feeBps": 200,
    "feeBreakdown": [
      {
        "bps": 150,
        "kind": "marketplace",
        "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      },
      {
        "bps": 50,
        "kind": "royalty",
        "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
      },
    ],
    "id": "0xfaf62580d1b09be900c589a860d4257adaa6e0b015b0096e4f821bfc970fc10f",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "looks-rare",
    "maker": "0x165896732df25087eba4e736604559ceafdfc82f",
    "price": {
      "amount": {
        "decimal": 11.87,
        "native": 11.87,
        "raw": "11870000000000000000",
        "usd": 14869.6289,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 11.6326,
        "native": 11.6326,
        "raw": "11632600000000000000",
        "usd": 14572.23632,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "looksrare.org",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
      "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      "name": "LooksRare",
      "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/3927",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:3927",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-16T14:35:11.082Z",
    "validFrom": 1668609284,
    "validUntil": 1671201277,
  },
  "0x60E4d786628Fea6478F785A6d7e704777c86a7c6:9018": {
    "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
    "createdAt": "2022-11-16T11:32:26.557Z",
    "expiration": 1669203063,
    "feeBps": 300,
    "feeBreakdown": [
      {
        "bps": 50,
        "kind": "marketplace",
        "recipient": "0xd823c605807cc5e6bd6fc0d7e4eea50d3e2d66cd",
      },
      {
        "bps": 250,
        "kind": "royalty",
        "recipient": "0xa858ddc0445d8131dac4d1de01f834ffcba52ef1",
      },
    ],
    "id": "0x7ca8ea8cb1b531c1d20259ec0b7464e2b40caf31a27ff274f746db39c1a8ac6c",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "x2y2",
    "maker": "0xc05669e488f0942ff1c3e2f6921a7a1942dd6ca2",
    "price": {
      "amount": {
        "decimal": 11,
        "native": 11,
        "raw": "11000000000000000000",
        "usd": 13779.77404,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 10.67,
        "native": 10.67,
        "raw": "10670000000000000000",
        "usd": 13366.38082,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "x2y2.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/x2y2-logo.png",
      "id": "0xdc28ffaea1f91a88fb6fd0a8fe70d71bdd64284c",
      "name": "X2Y2",
      "url": "https://x2y2.io/eth/0x60e4d786628fea6478f785a6d7e704777c86a7c6/9018",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:9018",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-16T11:32:26.557Z",
    "validFrom": 1668598346,
    "validUntil": 1669203063,
  },
  "0xed5af388653567af2f388e6224dc7c4b3241c544:2743": {
    "contract": "0xed5af388653567af2f388e6224dc7c4b3241c544",
    "createdAt": "2022-11-13T07:31:31.774Z",
    "expiration": 1668929348,
    "feeBps": 750,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 500,
        "kind": "royalty",
        "recipient": "0xb4d24dacbdffa1bbf9a624044484b3feeb7fdf74",
      },
    ],
    "id": "0xe36eb79b4924171539dfe4df7a9d26051737271d521ff0f221e7916a502aefec",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0x8599254f994d008f77a2144e049ee27940e9045f",
    "price": {
      "amount": {
        "decimal": 13.5,
        "native": 13.5,
        "raw": "13500000000000000000",
        "usd": 16911.54087,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 12.4875,
        "native": 12.4875,
        "raw": "12487500000000000000",
        "usd": 15643.1753,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0xed5af388653567af2f388e6224dc7c4b3241c544/2743",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0xed5af388653567af2f388e6224dc7c4b3241c544:2743",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-13T07:32:40.993Z",
    "validFrom": 1668324548,
    "validUntil": 1668929348,
  },
}
`;

exports[`ResevoirService should be able to get offers/bids for tokens 1`] = `
{
  "0x394E3d3044fC89fCDd966D3cb35Ac0B32B0Cda91:6781": undefined,
  "0x60E4d786628Fea6478F785A6d7e704777c86a7c6:3927": {
    "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
    "createdAt": "2022-11-16T14:35:11.082Z",
    "expiration": 1671201277,
    "feeBps": 200,
    "feeBreakdown": [
      {
        "bps": 150,
        "kind": "marketplace",
        "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      },
      {
        "bps": 50,
        "kind": "royalty",
        "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
      },
    ],
    "id": "0xfaf62580d1b09be900c589a860d4257adaa6e0b015b0096e4f821bfc970fc10f",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "looks-rare",
    "maker": "0x165896732df25087eba4e736604559ceafdfc82f",
    "price": {
      "amount": {
        "decimal": 11.87,
        "native": 11.87,
        "raw": "11870000000000000000",
        "usd": 14869.6289,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 11.6326,
        "native": 11.6326,
        "raw": "11632600000000000000",
        "usd": 14572.23632,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "looksrare.org",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
      "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      "name": "LooksRare",
      "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/3927",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:3927",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-16T14:35:11.082Z",
    "validFrom": 1668609284,
    "validUntil": 1671201277,
  },
  "0x60E4d786628Fea6478F785A6d7e704777c86a7c6:9018": {
    "contract": "0x60e4d786628fea6478f785a6d7e704777c86a7c6",
    "createdAt": "2022-11-16T13:36:35.208Z",
    "expiration": 1669210505,
    "feeBps": 200,
    "feeBreakdown": [
      {
        "bps": 150,
        "kind": "marketplace",
        "recipient": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      },
      {
        "bps": 50,
        "kind": "royalty",
        "recipient": "0xaae7ac476b117bccafe2f05f582906be44bc8ff1",
      },
    ],
    "id": "0xce9a993ab7e1402993e8765e50d74eef4b1d45dce1cbe9d0772b8908f8e49bb8",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "looks-rare",
    "maker": "0xc05669e488f0942ff1c3e2f6921a7a1942dd6ca2",
    "price": {
      "amount": {
        "decimal": 10.99,
        "native": 10.99,
        "raw": "10990000000000000000",
        "usd": 13767.24697,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 10.7702,
        "native": 10.7702,
        "raw": "10770200000000000000",
        "usd": 13491.90203,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "looksrare.org",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/looksrare-logo.svg",
      "id": "0x5924a28caaf1cc016617874a2f0c3710d881f3c1",
      "name": "LooksRare",
      "url": "https://looksrare.org/collections/0x60e4d786628fea6478f785a6d7e704777c86a7c6/9018",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0x60e4d786628fea6478f785a6d7e704777c86a7c6:9018",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-16T13:36:35.208Z",
    "validFrom": 1668605777,
    "validUntil": 1669210505,
  },
  "0xed5af388653567af2f388e6224dc7c4b3241c544:2743": {
    "contract": "0xed5af388653567af2f388e6224dc7c4b3241c544",
    "createdAt": "2022-11-15T02:38:44.638Z",
    "expiration": 1668929348,
    "feeBps": 750,
    "feeBreakdown": [
      {
        "bps": 250,
        "kind": "marketplace",
        "recipient": "0x0000a26b00c1f0df003000390027140000faa719",
      },
      {
        "bps": 500,
        "kind": "royalty",
        "recipient": "0xb4d24dacbdffa1bbf9a624044484b3feeb7fdf74",
      },
    ],
    "id": "0xcdaa788bb8ae77976779086901bdd2e31d434c048d291981f02bb6f169b4823e",
    "isDynamic": false,
    "isReservoir": null,
    "kind": "seaport",
    "maker": "0x8599254f994d008f77a2144e049ee27940e9045f",
    "price": {
      "amount": {
        "decimal": 11,
        "native": 11,
        "raw": "11000000000000000000",
        "usd": 13779.77404,
      },
      "currency": {
        "contract": "0x0000000000000000000000000000000000000000",
        "decimals": 18,
        "name": "Ether",
        "symbol": "ETH",
      },
      "netAmount": {
        "decimal": 10.175,
        "native": 10.175,
        "raw": "10175000000000000000",
        "usd": 12746.29099,
      },
    },
    "quantityFilled": 0,
    "quantityRemaining": 1,
    "side": "sell",
    "source": {
      "domain": "opensea.io",
      "icon": "https://raw.githubusercontent.com/reservoirprotocol/indexer/v5/src/models/sources/opensea-logo.svg",
      "id": "0x5b3256965e7c3cf26e11fcaf296dfc8807c01073",
      "name": "OpenSea",
      "url": "https://opensea.io/assets/0xed5af388653567af2f388e6224dc7c4b3241c544/2743",
    },
    "status": "active",
    "taker": "0x0000000000000000000000000000000000000000",
    "tokenSetId": "token:0xed5af388653567af2f388e6224dc7c4b3241c544:2743",
    "tokenSetSchemaHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
    "updatedAt": "2022-11-15T02:39:47.398Z",
    "validFrom": 1668479797,
    "validUntil": 1668929348,
  },
}
`;
